Firebase with Push notification Integrated

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 
 AppO.xcodeproj/xcuserdata/abuljaleel.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 AppO.xcodeproj/project.xcworkspace/xcuserdata/abuljaleel.xcuserdatad/UserInterfaceState.xcuserstate
+AppO.xcodeproj/xcuserdata/abuljaleel.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+AppO.xcodeproj/project.xcworkspace/xcuserdata/abuljaleel.xcuserdatad/UserInterfaceState.xcuserstate
